# autoclicker-rs

./: Cargo.toml  Settings.toml
src/: main.rs
