[package]
name = "autoclicker_rs"
version = "0.1.0"
authors = ["Aaron Tabor <Shoggoth269@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winapi = { version = "0.3.8", features = ["winuser", "impl-default"] }
winrt = "0.7"
winit = "0.22.2"
raw-window-handle = "0.3.3"